<resources xmlns:xliff="http://schemas.android.com/tools">
    <string name="app_name">VioletDroid</string>
    <string name="class_rectangle">Class</string>
    <string name="dependency_line">Dependency</string>
    <string name="aggregation_line">Aggregation</string>
    <string name="inheritance_line">Inheritance</string>
    <string name="sequence_rectangle">Active Period</string>
    <string name="method_line">Method Line</string>
    <string name="dash_bar">Dash_Bar</string>
    <string name="vertical_rectangle">Active Period</string>
    <string name="view_not_selected_tag">NotSelected</string>
    <string name="menu_share">Share</string>
    <item type="id" name="view_resource_key"></item>
    <string name="toast_no_available_space">Sorry, there is no available space to hold the diagram.</string>
    <string name="toast_no_intent_applications">Sorry, there is no available applications to share this diagram.</string>
    <string name="save">Save</string>
    <string name="save_with_the_background">Save with the background?</string>
    <string name="enter_diagram_name">Please enter your diagram\'s name</string>
    <string name="dialog_save">Save</string>
    <string name="dialog_cancel_button">Cancel</string>
    <string name="toast_diagram_not_saved">Diagram not saved</string>
    <string name="toast_prompt_sign_in">Please sign in to save the diagram</string>
    <string name="progress_dialog_saving_now">Saving…</string>
    <string name="default_diagram_name">Default</string>
    <string name="toast_saved_diagram_successfully">Saved successfully</string>
    <string name="progress_dialog_loading">Loading…</string>
    <string name="toast_no_saved_diagram">There is no any saved diagram</string>

    <string name="saved_diagrams_count_total">total</string>
    <string name="collections_default_count">0 total</string>
    <string name="default_collections_user_diagram">Username</string>
    <string name="detail_fragment_ok_button">OK</string>
    <string name="user_name">Username</string>
    <string name="password">Password</string>
    <string name="log_in_button">Login</string>
    <string name="does_not_have_account">No account yet?</string>
    <string name="sign_up_now">Sign Up Now!</string>
    <string name="toast_username_blank">Please enter you user name.</string>
    <string name="toast_password_blank">Please enter your password.</string>
    <string name="toast_login_successfully">Login Successfully!</string>
    <string name="content_login_logo">Login Logo</string>
    <string name="email">Email</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="sign_up_button">Sign Up</string>
    <string name="have_account">Have account already?</string>
    <string name="return_and_login">Login now!</string>
    <string name="type_username_hint">Please enter your username</string>
    <string name="type_email_hint">Please enter you email address</string>
    <string name="type_password_hint">Please enter you password</string>
    <string name="no_match_password_hint">Your two passwords do not match!</string>
    <string name="toast_sign_up_successfully">Sign up successfully!</string>
    <string name="menu_collections">My Diagrams</string>
    <string name="menu_signout">Sign Out</string>
    <string name="app_logo">App Logo</string>
    <string name="search_diagram_failed">Cannot display any saved diagrams. Please make sure you have saved them or check your network connection.</string>
    <string name="loading_empty_view">Loading…</string>
    <string name="delete">Delete</string>
    <string name="save_failed">Failed to save, please check your network connection and try again later</string>
    <string name="delete_failed">Cannot delete current diagram, please try again later</string>
    <string name="delete_successfully">Diagram has been deleted</string>
    <string name="no_saved_diagram">You have no saved diagram in our service.</string>
    <string name="dialog_delete_button">Delete</string>
    <string name="dialog_title_delete_diagram">Delete the current diagram?</string>
    <string name="self_call_sequence">Self_Call</string>

</resources>
