<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto">

    <item android:title="@string/save"
          android:id="@+id/menu_save"
          android:icon="@drawable/ic_save_white_24dp"
          app:showAsAction="always"/>
    <item

        android:title="@string/menu_share"
        android:id="@+id/menu_share"
        android:icon="@drawable/ic_share_white_24dp"
        app:showAsAction="ifRoom" />

    <item
        android:title="@string/menu_collections"
        android:id="@+id/menu_diagram_collections"
        android:icon="@drawable/ic_collections_white_24dp"
        app:showAsAction="ifRoom"/>

    <item
        android:title="@string/menu_signout"
        android:id="@+id/menu_sign_out"
        android:icon="@drawable/ic_exit_to_app_white_24dp"
        app:showAsAction="collapseActionView"/>







</menu>