<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/colorPrimaryDark"
            android:fillViewport="true"
    >

    <RelativeLayout

        android:layout_width="match_parent"
        android:paddingTop="18dp"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/log_in_logo"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_centerHorizontal="true"
            android:contentDescription="@string/content_login_logo"
            android:scaleType="fitCenter"
            android:src="@drawable/uml_logo"
            />

        <EditText
            android:id="@+id/log_in_username_editText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/log_in_logo"
            android:layout_centerHorizontal="true"
            android:background="@drawable/sign_up_username"
            android:gravity="center"
            android:hint="@string/user_name"
            android:inputType="textPersonName"
            android:textColor="@color/colorWhite"
            android:textColorHint="@color/light_gray"
            />

        <EditText
            android:id="@+id/log_in_password_editText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/log_in_username_editText"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="16dp"
            android:background="@drawable/sign_up_password"
            android:gravity="center"
            android:hint="@string/password"
            android:inputType="textWebPassword"
            android:textColor="@color/colorWhite"
            android:textColorHint="@color/light_gray"
            />

        <Button
            android:id="@+id/log_in_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/log_in_password_editText"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="12dp"
            android:background="@drawable/sign_up_button"
            android:text="@string/log_in_button"
            android:textColor="@color/colorWhite"
            android:textSize="22sp"/>

        <TextView
            android:id="@+id/no_account_textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/log_in_button"
            android:layout_centerHorizontal="true"
            android:text="@string/does_not_have_account"
            android:textColor="@color/colorWhite"
            android:textSize="16sp"/>

        <TextView
            android:id="@+id/log_in_sign_up_textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/no_account_textView"
            android:layout_centerHorizontal="true"
            android:text="@string/sign_up_now"
            android:textColor="@color/sign_up_now_color"
            android:textSize="16sp"/>


    </RelativeLayout>


</ScrollView>